Final CBNET - Messaging Commits
Final bug fixes and code changes for CBNET messaging portion.

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -72,7 +72,7 @@
 	<div class="container" id="error-container"></div>
 	<div class="container" id="outer-container">
 		<div class="container" id="form-container">
-			<form method="POST" action="Registered" id="login-form">
+			<form method="POST" action="Registered" id="login-form" target="_self">
 				<input type="text" name="username" id="username" placeholder="USERNAME">
 				<input type="password" name="passwd" id="passwd" placeholder="PASSWORD">
 				<button type="button" id="submit-button">START</button>
